[tool.poetry]
name = "software-dev-cw2"
version = "0.1.0"
description = "Software Dev Courseowork 2"
authors = ["rongachoka <rongachoka.rw@gmail.com>"]
readme = "README.md"
packages = [{include = "software_dev_cw2"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
seaborn = "^0.13.1"
jupyter = "^1.0.0"
missingno = "^0.5.2"
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
